--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,7 +11,9 @@ $theme-colors: (
   );
   
 
+@import 'node_modules/bootstrap/scss/bootstrap.scss';
 
+.pointer {
+  cursor:pointer;
 
-@import 'node_modules/bootstrap/scss/bootstrap.scss'
-
+}
